src/components/dashboard/dashboard.style.scss
.dashboard {
  height: 10%;
  width: 100%;
  position: absolute;
  bottom: 0px;
  z-index: 1000;
  transition: all 200ms ease-in-out;
  overflow: hidden;
  .chart-container {
    height: 100%;
    width: 100%;
    z-index: 0;
  }
  .toggle {
    z-index: 1000;
    visibility: visible !important;
    position: absolute;
    left: 0.5rem;
    top: 0.5rem;
    padding: 0.2rem 0.5rem;
    border: 0.2px solid black;
    background-color: #8884d8;
    color: black;
    transition: all 200ms ease-in-out;
    &:hover {
      cursor: pointer;
    }
    svg {
      width: 1.5rem;
      height: 1.5rem;
    }
  }
}
.large {
  height: 30%;
}

.invisible {
  visibility: collapse;
  pointer-events: none;
  height: 0px;
  .toggle {
    top: 20rem;
    border: 0.2rem solid black;
    background-color: #fff;
    color: black;
  }
}

.chart-enter {
  opacity: 0;
  transform: translateY(90%);
}
.chart-enter-active {
  opacity: 1;
  transform: translateY(0);
  transition: opacity 500ms, transform 500ms ease-in-out;
}
.chart-exit {
  opacity: 1;
  transform: translateY(0);
}
.chart-exit-active {
  opacity: 0;
  transform: translateY(90%);
  transition: opacity 500ms, transform 500ms ease-in-out;
}

